Fix default buttons visibility in light mode

--- a/src/styles/theme/core.scss
+++ b/src/styles/theme/core.scss
@@ -12,6 +12,7 @@ $light-black: grayscale(51);
 $black: grayscale(16);
 $dark-black: grayscale(0);
 
+$bg-lighter: rgb(187, 226, 246);
 $bg-light: rgb(78, 177, 232);
 $bg-dark: rgb(18, 92, 135);
 $light-blue: rgb(161, 211, 242);
