--- a/src/styles/theme/light.scss
+++ b/src/styles/theme/light.scss
@@ -4,8 +4,8 @@ $text-default: core.$light-black;
 $text-alt: core.$white;
 $text-disabled: core.$dark-white;
 
-$default: core.$bg-dark;
-$default-alt: core.$light-white;
+$default: core.$bg-lighter;
+$default-alt: core.$light-black;
 $primary: core.$bg-light;
 $primary-alt: core.$light-white;
 $secondary: rgba(core.$dark-gray, 0.8);
